--- a/vercel.json
+++ b/vercel.json
@@ -8,12 +8,24 @@
                 "runtime": "python3.9",
                 "maxLambdaSize": "15mb"
             }
+        },
+        {
+            "src": "build_files.sh",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "staticfiles_build"
+            }
         }
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "/static/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "catalogz/asgi.py"
         }
-    ]
+    ],
+    "outputDirectory": "staticfiles"
 }
