--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,7 @@ pathspec==0.11.2
 Pillow==10.0.1
 platformdirs==3.11.0
 pluggy==1.3.0
-psycopg==3.1.12
-psycopg-binary==3.1.12
+psycopg2-binary==2.9.9
 pytest==7.4.2
 pytest-django==4.5.2
 python-decouple==3.8
